# veriq

./: .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
examples/: dummysat.in.toml  dummysat.out.toml  dummysat.py  satellite-design.toml  satellite.py  satellite.py.design.toml  satellite.py.schema.json  table_with_basemodel.py
examples/.veriq/satellite/: Satellite-design-schema.json
src/veriq/: __init__.py  __main__.py  _build.py  _decorators.py  _eval.py  _exceptions.py  _exec.py  _export.py  _io.py  _models.py  _path.py  _relations.py  _table.py  _utils.py
src/veriq/_cli/: discover.py  main.py
tests/: test_context_mixin.py  test_dummy.py  test_table.py  test_table_basemodel_toml.py  test_table_pydantic.py
